--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
 dependencies = [
     "altair>=5.4.1",
     "duckdb>=1.1.3",
-    "pandas>=2.0.3",
+    "pandas",
     "typer",
 ]
 
